...
        case 20:
            let vc = TestViewController()
            navigationController?.pushViewController(vc, animated: true)
        case 21:
            let vc = ApiTestViewController()
            navigationController?.pushViewController(vc, animated: true)
        case 22:
            let vc = OCMVVMVC()
            navigationController?.pushViewController(vc, animated: true)
        case 23:
            let vc = QueueVC()
            navigationController?.pushViewController(vc, animated: true)
        case 24:
            let vc = RACCollectionTestVC()
            navigationController?.pushViewController(vc, animated: true)
        case 25:
            let vc = SortVC()
            navigationController?.pushViewController(vc, animated: true)
        case 26:
            let vc = OCSortVC()
            navigationController?.pushViewController(vc, animated: true)
        case 27:
//            NotificationCenter.default.post(name: NSNotification.Name., object: nil, userInfo: ["msg": "I Quit"])
            appShared?.todayDefault?.set("I Quit", forKey: "msg")
            appShared?.todayDefault?.synchronize()
...
